welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:24: error: Unmatched closing brace '}' ignored here
}
^